# homeassistant-face-recognition

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  build.yaml  config.yaml  repository.yaml  run.sh
backend/: pyproject.toml
backend/app/: cameras.py  cascade.py  config.py  db.py  main.py  matching.py  persons.py  routes_persons.py  schemas.py  snapshot.py  static.py  worker.py
backend/app/ml/: __init__.py  recognize.py
backend/tests/: conftest.py  test_api.py  test_cascade.py  test_detections.py  test_matching.py  test_ml_integration.py  test_persons.py  test_static.py
docs/: INSTALL.md  automation.yaml
face_recognition/: Dockerfile  config.yaml
face_recognition/backend/app/: __init__.py  detections.py  main.py  motion.py  mqtt.py  roi.py  routes.py  routes_detections.py  schemas.py  worker.py
face_recognition/backend/app/ml/: face.py  models.py  person.py
face_recognition/backend/tests/: test_motion.py  test_mqtt.py  test_persons.py
face_recognition/frontend/app/: layout.tsx
frontend/: next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ui.tsx
frontend/components/cameras/: CameraCard.tsx  CamerasView.tsx  RoiEditor.tsx
frontend/components/events/: EventsView.tsx
frontend/components/persons/: FaceEnroll.tsx  PersonCard.tsx  PersonsView.tsx
frontend/lib/: api.ts  types.ts
frontend/scripts/: relativize.mjs
